//  Tap Protobuf File Format (v0.6)
//  Paul Sutter
//  Copyright Â© Quantbench 2011-2012
//
//  A Tap protobuf file consists of a signature followed by a series of blocks.
//  In order to maintain the write-once / append only format of the file, most of
//  the file metadata is stored in a trailer.
//
//  To open the file, the last 16 bytes are read to check the signature and locate 
//  the trailer. Then the trailer is read. If the index is needed, it is then read.
//  The initial physical read might be 64-256K so that only one physical io occurs.
//
//  Keys are constructed in big-endian format (most significant byte first) so that
//  they can be compared using memcmp()
//
//  Wondering why blocks are 512-byte aligned? Send guesses to paul at quantbench dot com
//
//  Partition File Format (each <> represents a "block" defined below)
//
//  'tapproto'                      file format signature
//  <header block>
//  <data block>
//  <data block>
//  <data block>...       
//  <index block>
//  <trailer block>
//
//  Header block:
//
//      'head'                      offset = 8 bytes
//      'none'                      
//      <Header protobuf>           partially completed header
//      <pad>                       align to 512 bytes
//
//  Data block (T is user protobuf):
//
//      'data'                      offset = data_offset in upper index
//      'none' | 'gzip' | 'snap' 
//   
//      <varint keylen>             native protobuf encoding of lengths
//      <key bytes>
//      <varint msglen>
//      <T protobuf>
//
//      <varint keylen>
//      <key bytes>
//      <varint msglen>
//      <T protobuf>
//
//      <varint keylen>
//      <key bytes>
//      <varint msglen>
//      <T protobuf>...             n = message_count in upper index
//      <pad>                       align to 512 bytes
//
//  Index block (one per partition file):
//
//      'indx'                      offset = upper_index_offset in trailer
//      'none'                      may add compression later
//      <IndexEntry protobuf>   
//      <IndexEntry protobuf>   
//      <IndexEntry protobuf>...    n = data_block_count in trailer
//      <pad>                       align to 512 bytes
//
//  Trailer block:
//
//      'trai'                      offset = backlink in trailing signature
//      'none'    
//      <Header protobuf>           fully completed header
//      <Metadata protobuf>
//      <Metadata protobuf>
//      <Metadata protobuf>...      n = metadata_count in trailer
//      <pad>                       pad so that signature ends 512-byte aligned
//      <backlink>                  little endian 64 bit unsigned offset of trailer
//      'tapproto'                  signature at end of file
// 

package tap.formats.tapproto;

message IndexEntry {
    optional bytes  first_key = 1;                  // first key value in the data block or partition
    optional uint64 data_offset = 2;                // starting offset of data block (null if filename is present)
    optional uint64 data_bytes = 3;                 // on-disk length of user messages (excluding pad)
    optional uint32 message_count = 6;              // number of messages in this data block
    
    // new for manifest support
    
    optional bytes last_key = 7;                    // last key value in data block or partition 
    optional string filename = 8;                   // for manifest, external file name (offset should be null)
    optional uint32 partition_count = 9;            // 1 for phase-manifest, n for archive-manifest, null for tapfile
    optional uint64 index_offset = 10;              // present for manifests, absenet for tapfiles
    optional uint43 uncompressed_bytes = 11;        // uncompressed number of data bytes in data block or tapfile or manifest 
    optional sint64 modification_time = 12;         // Timestamp of modification time of file or manifest (absent for data block)

    // STILL NEED CHECKSUMS(!)

}

message Header {

    // trailer and header common fields
 
    optional string     copyright_notice = 100;     // optional data provider copyright notice
    optional uint32     partition_count = 101;      // number of partitions (omit if not hash partitioned)
    optional uint32     partition_number = 102;     // zero-based partition number (omit if not hash partitioned)
    optional string     initial_pipe_name = 103;    // pipe name (not updated when file is renamed) 
    optional string     message_name = 104;         // Protobuf message name
    optional string     key_descriptor = 105;       // Tap key descriptor string
    optional uint64     target_decomp_size = 106;   // target decompression size (for example, 64K or 256K)
   
    // trailer-only fields
   
    optional uint64     index_offset = 200;         // offset of the index block
    optional uint64     index_bytes = 201;          // length in bytes of the index block
    optional uint64     index_entry_count = 205;    // number of index entries in THIS file (was data block count)
    optional uint64     max_decomp_size = 207;      // max(uncompressed_bytes) from index

    optional bytes      first_key = 202;            // first key value described by this file
    optional bytes      last_key = 203;             // last key value described by this file
    optional uint64     message_count = 204;        // number of messages descrubed by this file
    optional uint64     uncompressed_bytes = 206;   // sum of the uncompressed data bytes described by this file (include all children)
    optional sint64     modification_time = 208;    // modification time of this file (time this trailer is written)
    optional uint64     partition_count = 209;      // total number of partitions described by this file
    optional uint64     data_bytes = 210;           // total number of compressed data bytes described by this file
    
    repeated bytes      format_descriptor = 301;    // all proto FileDescriptors needed to reconstruct message
    optional uint32     metadata_count = 302;       // number of Metadata messages to follow
    
    // STILL NEED CHECKSUMS(!)
}

message Metadata {
    optional string key = 1;                        // this is a key as in key/value not a message key
    optional string string_value = 2;               // only one value allowed per key/value pair
    optional uint64 integer_value = 3;
    optional double double_value = 4;
    optional bytes bytes_value = 5;
    
field to add for manifest supprot:
        partiton-only flag (or maybe a pipewide flag? rollup?)
}
